--- a/css/update_level.css
+++ b/css/update_level.css
@@ -81,36 +81,10 @@
 }
 
 .level-select {
-  width: 100%;
-  max-width: 150px;
-  display: flex;
-  height: 36px;
-  justify-content: center;
-  margin-top: 22px;
-  position: relative;
+  margin-top: 16px;
 }
 
-.level-select > select {
-  width: 100%;
-  height: 100%;
-  padding: 7px 16px 7px 20px;
-  background-color: #eeeeee;
-  border-radius: 18px;
-  color: #707070;
-  cursor: pointer;
-}
-
-.arrow {
-  width: 14px;
-  height: 8px;
-  background-image: url("../images/arrow_down.svg");
-  position: absolute;
-  top: 50%;
-  right: 16px;
-  transform: translateY(-50%);
-}
-
-.level-select > select > option {
-  position: absolute;
-  bottom: 80px;
+.level-select > .nice-select-dropdown .list {
+  max-height: 120px;
+  overflow-y: scroll;
 }
