--- a/css/my_class.css
+++ b/css/my_class.css
@@ -9,14 +9,7 @@
 .container {
   width: 100%;
   max-width: 1920px;
-  /* padding: 108px 28px; */
-  padding: 108px 2vw;
-}
-
-@media (max-width: 1080px) {
-  .container {
-    padding: 108px 36px 108px 0px;
-  }
+  padding: 108px 1vw;
 }
 
 .my-class {
@@ -25,8 +18,9 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin: 0px auto;
 }
+
+/* my-class rwd */
 
 /* left */
 
@@ -42,13 +36,21 @@
   display: flex;
   flex-direction: column;
   margin-top: 310px;
-  margin-right: 32px;
+  margin-right: 2.2vw;
   padding: 30px 18px;
   background-color: #ffffff;
   border-radius: 20px;
   position: relative;
   z-index: 10;
 }
+
+/* left rwd */
+@media (min-width: 1440) {
+  .left-wrapper {
+    margin-right: 32px;
+  }
+}
+
 /* calendar */
 .calendar {
   width: 100%;
@@ -58,7 +60,7 @@
 }
 
 .calendar-title {
-  font-size: 30px;
+  font-size: 24px;
   color: #50b1ff;
   margin-bottom: 16px;
 }
@@ -71,7 +73,7 @@
   align-items: center;
   border-top: 1px solid #50b1ff;
   border-bottom: 1px solid #50b1ff;
-  margin-bottom: 40px;
+  margin-bottom: 48px;
 }
 .calendar-time > .calendar-time-clock {
   width: 24px;
@@ -82,6 +84,7 @@
 .calendar-time > .calendar-time-turn {
   width: 24px;
   height: 24px;
+  margin-right: 8px;
   background-image: url("../images/calendar_turn.svg");
   background-repeat: no-repeat;
   background-position: center;
@@ -90,7 +93,8 @@
 }
 
 .calendar-time .calendar-time-text {
-  font-size: 22px;
+  flex: 1;
+  font-size: 18px;
   color: #8f8f8f;
   margin-right: 28px;
 }
@@ -105,7 +109,7 @@
 
 .calendar-header-text {
   color: #50b1ff;
-  font-size: 24px;
+  font-size: 18px;
 }
 
 .calendar-header-button {
@@ -143,7 +147,7 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 4px;
-  font-size: 22px;
+  font-size: 18px;
   color: #707070;
   text-align: center;
 }
@@ -412,7 +416,6 @@
 /* reserve start */
 .reserve {
   max-width: 680px;
-  /* padding-left: 20px 50px 20px 58px; */
   padding-left: 66px;
 }
 
@@ -476,7 +479,6 @@
 
 .reserve-item-right {
   width: 100%;
-  /* margin-bottom: 28px; */
 }
 
 .reserve-item:last-of-type .reserve-item-right {
@@ -762,12 +764,6 @@
   flex-direction: column;
 }
 
-@media (max-width: 1080px) {
-  .right {
-    max-width: 650px;
-  }
-}
-
 /* tab */
 .tab {
   width: 100%;
@@ -798,8 +794,8 @@
 }
 
 .tab-item-icon.menu01 {
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   background-image: url("../images/menu01.svg");
 }
 
@@ -809,8 +805,8 @@
 }
 
 .tab-item-icon.menu02 {
-  width: 38px;
-  height: 30px;
+  width: 32px;
+  height: 26px;
   background-image: url("../images/menu02.svg");
 }
 
@@ -820,8 +816,8 @@
 }
 
 .tab-item-icon.menu03 {
-  width: 38px;
-  height: 30px;
+  width: 34px;
+  height: 28px;
   background-image: url("../images/menu03.svg");
 }
 
@@ -831,7 +827,7 @@
 }
 
 .tab-item .tab-item-text {
-  font-size: 24px;
+  font-size: 20px;
   color: #707070;
 }
 
@@ -864,13 +860,13 @@
 }
 
 .header-image.monster01 {
-  max-width: 17.6vw;
-  margin-right: -32px;
+  max-width: 16.5vw;
+  margin-right: -24px;
 }
 
 .header-image.monster02 {
-  max-width: 17.2vw;
-  margin-right: -24px;
+  max-width: 16.1vw;
+  margin-right: 8px;
   margin-left: -36px;
 }
 
@@ -886,26 +882,27 @@
   justify-content: flex-end;
   align-items: center;
   position: relative;
+  margin-bottom: 24px;
 }
 
 .header-level > .header-level-image {
   width: 100%;
-  max-width: 340px;
+  max-width: 22vw;
 }
 
 .header-level > .header-level-image > img {
   width: 100%;
-  height: 124px;
-  transform: translateY(28px);
+  height: 100%;
+  transform: translateY(20px);
 }
 
 .header-level > .header-level-title {
-  font-size: 1.65vw;
+  font-size: 1.4vw;
   color: #707070;
 }
 
 .header-level > .header-level-text {
-  font-size: 2.75vw;
+  font-size: 2.5vw;
   color: #50b1ff;
   font-weight: bold;
 }
@@ -914,16 +911,19 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin: 0px 12px 20px -60px;
+  margin: 0px 1.1vw 20px -60px;
   color: #707070;
-  font-size: 1.25vw;
+  font-size: 1.12vw;
   bottom: 0px;
   right: 0px;
 }
 
 .header-action > .header-action-item {
-  width: 5vw;
+  width: 4.8vw;
   cursor: pointer;
+}
+.header-action > .header-action-item:hover {
+  color: #50b1ff;
 }
 
 .header-action > .header-action-divider {
@@ -936,54 +936,37 @@
 /* header rwd */
 @media (min-width: 1440px) {
   .header-image.monster01 {
-    max-width: 254px;
+    max-width: 238px;
   }
 
   .header-image.monster02 {
-    max-width: 248px;
+    max-width: 232px;
+  }
+
+  .header-level > .header-level-image {
+    max-width: 316px;
   }
 
   .header-level > .header-level-title {
-    font-size: 24px;
+    font-size: 20px;
   }
 
   .header-level > .header-level-text {
-    font-size: 40px;
+    font-size: 28px;
   }
 
   .header-action {
-    font-size: 18px;
+    font-size: 16px;
   }
 
   .header-action > .header-action-item {
-    width: 72px;
-  }
-}
-
-@media (max-width: 1080px) {
-  .header {
-    justify-content: flex-start;
-  }
-
-  .header-image.monster02 {
-    display: none;
-  }
-
-  .header-action {
-    font-size: 18px;
-    margin-left: 0px;
-    margin-right: 0px;
-  }
-
-  .header-action > .header-action-item {
-    width: 72px;
+    width: 64px;
   }
 }
 
 /* lesson */
 .lesson {
   width: 100%;
-  min-height: 600px; /* TODO */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -995,7 +978,7 @@
 
 .lesson-title {
   color: #cccccc;
-  font-size: 30px;
+  font-size: 26px;
 }
 
 .lesson-carousel {
@@ -1022,8 +1005,8 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin: 0px 90px;
-  transform: translateY(20px);
+  margin: 0px 12.5vw;
+  transform: translateY(16px);
   z-index: 1;
 }
 
@@ -1044,6 +1027,8 @@
 
 .lesson-carousel-content-unit-item.active
   > .lesson-carousel-content-unit-item-dot {
+  width: 20px;
+  height: 20px;
   background-color: #ed4c7c;
   border: 4px solid #eeeeee;
 }
@@ -1056,14 +1041,14 @@
 .lesson-carousel-content-unit-item.active::before {
   content: "本週課程";
   width: 80px;
-  height: 27px;
+  height: 28px;
   border-radius: 4px;
   background-color: #fc8aac;
   text-align: center;
   color: #ffffff;
   font-size: 16px;
   position: absolute;
-  top: -52px;
+  top: -48px;
 }
 
 .lesson-carousel-content-unit-item.active::after {
@@ -1074,22 +1059,29 @@
   border-width: 14px 10px 0 10px;
   border-color: #fc8aac transparent transparent transparent;
   position: absolute;
-  top: -28px;
+  top: -24px;
 }
 
 .lesson-carousel-content-unit-item-dot {
-  width: 24px;
-  height: 24px;
+  width: 14px;
+  height: 14px;
   background-color: #ffffff;
-  border: 4px solid #cccccc;
+  border: 2px solid #cccccc;
   border-radius: 50%;
   margin-bottom: 8px;
 }
 
 .lesson-carousel-content-unit-item-text {
   color: #707070;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: bold;
+}
+
+/* lesson carousel rwd */
+@media (min-width: 1440px) {
+  .lesson-carousel-content {
+    margin: 0px 180px;
+  }
 }
 
 .lesson-unit {
@@ -1117,6 +1109,7 @@
   display: flex;
   justify-content: center;
   z-index: 1;
+  margin-bottom: 16px;
 }
 
 .lesson-unit-info-title-text {
@@ -1124,7 +1117,7 @@
   height: 42px;
   background-color: #fc8aac;
   color: #ffffff;
-  font-size: 24px;
+  font-size: 20px;
   text-align: center;
   line-height: 42px;
   border-bottom-left-radius: 10px;
@@ -1133,19 +1126,19 @@
 
 .lesson-unit-info-content {
   width: 100%;
-  max-width: 928px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 0px auto;
-  padding: 0px 8px;
+  padding: 0px 28px;
   z-index: 1;
 }
 
 .lesson-unit-info-content-title {
   color: #ed4c7c;
-  font-size: 34px;
+  font-size: 26px;
+  font-weight: bold;
   margin-top: 8px;
   margin-bottom: 14px;
 }
@@ -1153,7 +1146,7 @@
 .lesson-unit-info-content-text {
   width: 100%;
   color: #707070;
-  font-size: 18px;
+  font-size: 16px;
   text-align: center;
   z-index: 1;
 }
@@ -1170,10 +1163,10 @@
 .course {
   display: flex;
   flex-direction: row;
+  padding: 0px 24px;
 }
 
 .course-info {
-  /* min-width: 204px; */
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -1192,28 +1185,29 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   margin-bottom: 10px;
 }
 
 .course-info-content-status-check {
-  width: 28px;
-  height: 28px;
+  width: 22px;
+  height: 22px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: hsl(207, 100%, 66%);
   border-radius: 50%;
-  margin-right: 8px;
 }
 
 .course-info-content-status-check > img {
-  width: 16px;
-  height: 12px;
+  width: 12.6px;
+  height: 9.8px;
 }
 
 .course-info-content-status-text {
   color: #707070;
-  font-size: 20px;
+  font-size: 1.15vw;
+  margin-left: 8px;
 }
 
 .course-info-content-time {
@@ -1221,7 +1215,7 @@
   flex-direction: column;
   align-items: center;
   color: #707070;
-  font-size: 24px;
+  font-size: 1.25vw;
   font-weight: bold;
 }
 
@@ -1248,15 +1242,6 @@
 .course.dark .course-info {
   padding-right: 20px;
 }
-.course.dark .course-info-content-status-text {
-  color: #cccccc;
-  font-size: 20px;
-}
-
-.course.dark .course-info-content-time {
-  color: #50b1ff;
-  font-size: 20px;
-}
 
 .course.dark .course-info-divider {
   display: none;
@@ -1277,57 +1262,9 @@
   .course-info {
     padding-right: 64px;
   }
-}
 
-@media (max-width: 1080px) {
-  .course {
-    padding-top: 12px;
-    flex-direction: column;
-    position: relative;
-  }
-
-  .course-info {
-    justify-content: flex-start;
-  }
-  .course-info-content {
-    flex-direction: row;
-    margin-bottom: 10px;
-    margin-top: 0px;
-    margin-left: -34px;
-    z-index: 1;
-  }
-  .course-info-content-status {
-    margin-bottom: 0px;
-    margin-right: 12px;
-  }
-  .course-info-content-status-check {
-    margin-right: 12px;
-  }
   .course-info-content-time {
-    flex-direction: row;
-    font-size: 20px;
-  }
-
-  .course-info-divider {
-    position: absolute;
-    top: 0px;
-    left: -20px;
-  }
-
-  .course-info-divider::before {
-    display: none;
-  }
-
-  .course-card {
-    margin-left: 10px;
-  }
-
-  .course.dark .course-info-content-status-text {
-    color: #ffffff;
-  }
-
-  .course.dark .course-info-content-time {
-    color: #ffffff;
+    font-size: 18px;
   }
 }
 
@@ -1339,7 +1276,7 @@
 /* lesson enhance course */
 .lesson-enhance {
   width: 100%;
-  background-color: #36789b;
+  background-color: #c6e1f6;
 }
 
 .lesson-enhance-title {
@@ -1354,7 +1291,7 @@
   height: 42px;
   background-color: #2299ee;
   color: #ffffff;
-  font-size: 24px;
+  font-size: 20px;
   text-align: center;
   line-height: 42px;
   border-bottom-left-radius: 10px;
@@ -1366,17 +1303,6 @@
   flex-direction: column;
   align-items: center;
   padding: 50px 0px 40px 0px;
-}
-
-@media (max-width: 1080px) {
-  .lesson-enhance-title {
-    display: none;
-  }
-
-  .lesson-enhance-course {
-    padding-top: 8px;
-    padding-bottom: 20px;
-  }
 }
 
 /* story */
@@ -1452,7 +1378,7 @@
 .story-content-image.image02 {
   width: 100%;
   max-width: 70px;
-  right: -40px;
+  right: -12px;
   top: 74px;
 }
 
@@ -1596,10 +1522,4 @@
 .story-course-card-image > img {
   width: 100%;
   border-radius: 10px;
-}
-
-@media (max-width: 1080px) {
-  .story-content {
-    padding: 28px 52px 96px 52px;
-  }
 }
