--- a/css/update_time.css
+++ b/css/update_time.css
@@ -7,6 +7,12 @@
   background-color: #505050;
 }
 
+@media (max-width: 767px) {
+  .layout {
+    align-items: flex-start;
+  }
+}
+
 .update-time-modal {
   width: 100%;
   max-width: 700px;
@@ -14,6 +20,15 @@
   background-color: #ffffff;
   border-radius: 20px;
   overflow-x: hidden;
+}
+
+/* update-time-modal rwd */
+@media (max-width: 767px) {
+  .update-time-modal {
+    max-width: 100%;
+    height: 100%;
+    border-radius: 0px;
+  }
 }
 
 .header {
@@ -35,6 +50,16 @@
 .header-underline {
   width: 45px;
   border-bottom: 5px solid #ffffff;
+}
+
+/* header rwd */
+@media (max-width: 767px) {
+  .header {
+    height: 72px;
+  }
+  .header-title {
+    font-size: 24px;
+  }
 }
 
 .body {
@@ -59,6 +84,17 @@
 .body-header-time {
   color: #ed4c7c;
   font-size: 22px;
+}
+
+/* ubody-header rwd */
+@media (max-width: 767px) {
+  .body-header-title {
+    font-size: 14px;
+  }
+
+  .body-header-time {
+    font-size: 18px;
+  }
 }
 
 .tab {
@@ -89,7 +125,15 @@
   border-bottom: 2px solid #fc8aac;
 }
 
-/* // */
+/* tab rwd */
+@media (max-width: 767px) {
+  .tab-item-text {
+    font-size: 14px;
+    padding-bottom: 6px;
+  }
+}
+
+/* carousel/ */
 .carousel {
   width: 100%;
   height: 84px;
@@ -156,6 +200,31 @@
 .carousel-content-date-item-date {
   color: #707070;
   font-size: 20px;
+}
+
+/* carousel rwd */
+@media (max-width: 767px) {
+  .carousel-content-date {
+    width: 100%;
+    padding: 0px 6.5vw;
+  }
+  .carousel-content-date-item-dot {
+    width: 12px;
+    height: 12px;
+  }
+
+  .carousel-content-date-item-week {
+    font-size: 12px;
+  }
+
+  .carousel-content-date-item-date {
+    font-size: 16px;
+  }
+
+  .carousel-content-date-item {
+    flex: 1;
+    margin: 0px;
+  }
 }
 
 .time-picker {
