--- a/css/update_level.css
+++ b/css/update_level.css
@@ -7,6 +7,12 @@
   background-color: #505050;
 }
 
+@media (max-width: 767px) {
+  .layout {
+    align-items: flex-start;
+  }
+}
+
 .update-level-modal {
   width: 100%;
   max-width: 700px;
@@ -14,6 +20,15 @@
   background-color: #ffffff;
   border-radius: 20px;
   overflow-x: hidden;
+}
+
+/* update-level-modal rwd */
+@media (max-width: 767px) {
+  .update-level-modal {
+    max-width: 100%;
+    height: 100%;
+    border-radius: 0px;
+  }
 }
 
 .header {
@@ -35,6 +50,16 @@
 .header-underline {
   width: 45px;
   border-bottom: 5px solid #ffffff;
+}
+
+/* header rwd */
+@media (max-width: 767px) {
+  .header {
+    height: 72px;
+  }
+  .header-title {
+    font-size: 24px;
+  }
 }
 
 .body {
