--- a/css/update_level.css
+++ b/css/update_level.css
@@ -20,12 +20,14 @@
   background-color: #ffffff;
   border-radius: 20px;
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 /* update-level-modal rwd */
 @media (max-width: 767px) {
   .update-level-modal {
     max-width: 100%;
+    min-height: 100%;
     height: 100%;
     border-radius: 0px;
   }
