--- a/css/reserve_class.css
+++ b/css/reserve_class.css
@@ -4,6 +4,12 @@
   padding: 108px 80px;
 }
 
+@media (max-width: 767px) {
+  .container {
+    padding: 40px 20px;
+  }
+}
+
 .layout {
   width: 100%;
   height: 100%;
@@ -28,6 +34,33 @@
 }
 
 .reserve-course-wrapper {
-  flex-basis: 50%;
+  flex-basis: 48%;
   margin-bottom: 72px;
+  margin-right: 16px;
+}
+
+@media (max-width: 1023px) {
+  .reserve-course-wrapper {
+    flex-basis: 100%;
+  }
+}
+
+@media (max-width: 767px) {
+  .reserve-title {
+    text-align: center;
+  }
+
+  .reserve-course {
+    margin-top: 24px;
+  }
+
+  .reserve-course-wrapper {
+    display: flex;
+    justify-content: center;
+    margin-right: 0px;
+  }
+
+  .reserve-course-wrapper .course-card {
+    padding-bottom: 0px;
+  }
 }
