--- a/css/font.css
+++ b/css/font.css
@@ -1,111 +1,4 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	outline: 0;
-	font-size: 100%;
-	vertical-align:top;
-	list-style: none;
-	text-decoration:none;
-	
-}
-html, body{
-    height:100%;
-	position: relative;
-    font-family: 'museo_sans500',"Microsoft JhengHei","Hiragino Sans GB", Arial,Lucida,Verdana,SimSun,Helvetica,sans-serif;
-	background: #2b83bb;
-  /* Old browsers */
-  background: -moz-linear-gradient(top, #2b83bb 0%, #4d9dd0 100%) fixed;
-  /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #2b83bb 0%, #4d9dd0 100%) fixed;
-  /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #2b83bb 0%, #4d9dd0 100%) fixed;
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  /* filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2b83bb', endColorstr='#4d9dd0',GradientType=0 ); */
-  /* IE6-9 */
-}
-
-ol, ul span{
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-
-
-/* remember to define focus styles! */
-:focus {
-	outline: 0;
-}
-
-/* remember to highlight inserts somehow! */
-ins {
-	text-decoration: none;
-}
-del {
-	text-decoration: line-through;
-}
-
-/* tables still need 'cellspacing="0"' in the markup */
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-* {
-	appearance:normal;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	vertical-align: baseline;
-	outline: none;
-	font-size-adjust: none;
-	-webkit-text-size-adjust: none;
-	-moz-text-size-adjust: none;
-	-ms-text-size-adjust: none;
-}
-.clear{
-	clear:both;
-	}
-#pageslide {
-    /* These styles MUST be included. Do not change. */
-    display: none;
-    position: absolute;
-    position: fixed;
-    top: 0;
-    height: 100%;
-    z-index: 999999;
-    
-    /* Specify the width of your pageslide here */
-    width: 260px;
-    padding: 0 20px;
-    
-    /* These styles are optional, and describe how the pageslide will look */
-    background-color: #333;
-    color: #FFF;
-    -webkit-box-shadow: inset 0 0 5px 5px #222;
-    -moz-box-shadow: inset 0 0 5px 5px #222;
-    box-shadow: inset 0 0 5px 5px #222;
-}
-
-
-
+@charset "UTF-8";
 /* CSS Document */
 
 @font-face {
@@ -183,5 +76,3 @@ table {
     font-weight: normal;
     font-style: normal;
 }
-
-
