--- a/css/update_time.css
+++ b/css/update_time.css
@@ -20,7 +20,7 @@
   background-color: #ffffff;
   border-radius: 20px;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 /* update-time-modal rwd */
